--- a/原生js写的轮播图组件/app.html
+++ b/原生js写的轮播图组件/app.html
@@ -16,11 +16,11 @@ API说明:
 -->
 <!--swipercontainer 是固定写法 div必须叫这个名字-->
 <div id="swipercontainer" swiperwidth="300" swiperheight="200" timecost="400" pageInterval="1000" isfull="false">
-    <img src="../img/1.jpg"/>
-    <img src="../img/2.jpg"/>
-    <img src="../img/3.jpg"/>
-    <img src="../img/4.jpg"/>
-    <img src="../img/5.jpg"/>
+    <img src="img/1.jpg"/>
+    <img src="img/2.jpg"/>
+    <img src="img/3.jpg"/>
+    <img src="img/4.jpg"/>
+    <img src="img/5.jpg"/>
 </div>
 <!--需要使用我的轮播图组件需要引入一份css 一份js-->
 <link rel="stylesheet" href="swiper.css"/>
